@@ -1,3 +1,13 @@
+2009-12-23  Pavel Feldman  <pfeldman@chromium.org>
+
+        Reviewed by Timothy Hatcher.
+
+        Web Inspector: Console dumps strings in escaped form.
+
+        https://bugs.webkit.org/show_bug.cgi?id=32488
+
+        * inspector/console-format-expected.txt:
+
 2009-12-23  Alexey Proskuryakov  <ap@apple.com>
 
         Reviewed by Darin Adler.
